# pkmai-client

./: .gitignore  requirements.txt  setup.cfg
src/pkmai/: client.py
src/pkmai/battle/: battle.py  choose.py  db.py  move.py  moveset.py  pokemon.py  request.py  state.py  stats.py  team.py
src/pkmai/room/: battle.py  chat.py  room.py
src/pkmai/utils/: exception.py  string.py  type.py
