[metadata]
name = pkmai
version = 0.0.1
author = Vo Van Nghia
author_email = vovannghia2409@gmail.com
description = A Python Showdown client
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    websockets==10.0
    aiohttp==3.7.4.post0

[options.packages.find]
where = src

[mypy]
mypy_path = src
